# larkstack

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  README.md  README_CN.md  README_zh.md  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  prek.toml  test-webhook.sh  zensical.toml
.github/workflows/: ci.yml  docker.yml
apps/automations/meeting-digest/: Cargo.toml  README_CN.md
apps/automations/meeting-digest/src/: actions.rs  app.rs  config.rs  lib.rs  main.rs  run.rs
apps/automations/meeting-digest/src/lark/: mod.rs
apps/automations/meeting-digest/src/stt/: mod.rs
apps/automations/minutes/: Cargo.toml  README.md  README_CN.md
apps/automations/minutes/src/: actions.rs  app.rs  config.rs  main.rs  pipeline.rs  run.rs
apps/automations/standup/: Cargo.toml
apps/automations/standup-bot/: Cargo.toml
apps/automations/standup-bot/src/: actions.rs  app.rs  config.rs  lib.rs  main.rs  run.rs
apps/automations/standup-bot/templates/: check.txt
apps/automations/standup/.cargo/: config.toml
apps/automations/standup/src/: actions.rs  app.rs  commands.rs  config.rs  date.rs  flow.rs  lib.rs  main.rs  template.rs  templates.rs
apps/automations/standup/src/lark/: card.rs  doc.rs  mod.rs
apps/automations/standup/src/runtime/: app.rs  mod.rs  run.rs
apps/automations/standup/src/settings/: mod.rs  routes.rs
apps/automations/standup/src/trigger/: actions.rs  commands.rs  mod.rs  scheduler.rs
apps/integrations/github/: AGENTS.md  Cargo.toml
apps/integrations/github/src/: actions.rs  app.rs  cards.rs  config.rs  lib.rs  main.rs  routes.rs  run.rs
apps/integrations/github/src/source/: handler.rs  mod.rs  utils.rs
apps/integrations/gitlab/: AGENTS.md  Cargo.toml
apps/integrations/linear/: AGENTS.md  Cargo.toml
apps/integrations/linear-bridge/: Cargo.toml  Dockerfile
apps/integrations/linear-bridge/src/: actions.rs  app.rs  config.rs  dispatch.rs  event.rs  lib.rs  main.rs  run.rs  utils.rs
apps/integrations/linear-bridge/src/sinks/lark/: bot.rs  cards.rs  event_handler.rs  mod.rs  models.rs  webhook.rs
apps/integrations/linear-bridge/src/sources/: mod.rs
apps/integrations/linear-bridge/src/sources/github/: handler.rs  mod.rs  utils.rs
apps/integrations/linear-bridge/src/sources/linear/: client.rs  handler.rs  mod.rs  utils.rs
apps/integrations/linear-bridge/src/sources/x/: mod.rs
apps/integrations/linear/graphql/: issue_by_number.graphql  issue_subscribers.graphql  issues_due_soon.graphql  schema.graphql
apps/integrations/linear/src/: actions.rs  app.rs  cards.rs  config.rs  debounce.rs  event_handler.rs  lib.rs  main.rs  model.rs  notify.rs  run.rs  scheduler.rs
apps/integrations/linear/src/db/: mod.rs
apps/integrations/linear/src/db/due_reminders/: entity.rs  migration.rs  mod.rs
apps/integrations/linear/src/db/settings/: entity.rs  migration.rs  mod.rs  routes.rs
apps/integrations/linear/src/db/user_map/: entity.rs  migration.rs  mod.rs
apps/integrations/linear/src/domain/: debounce.rs  mod.rs  reminders.rs
apps/integrations/linear/src/lark/: cards.rs  mod.rs  notify.rs
apps/integrations/linear/src/routes/: mod.rs  preview.rs  webhook.rs
apps/integrations/linear/src/source/: api.rs  changes.rs  handler.rs  mod.rs  payload.rs  utils.rs
apps/integrations/linear/src/user_map/: routes.rs
apps/integrations/x/: Cargo.toml
apps/integrations/x/src/: app.rs  cards.rs  config.rs  event_handler.rs  lib.rs  main.rs  routes.rs  run.rs
crates/console/: Cargo.toml  build.rs
crates/console/src/: main.rs
crates/console/web/: .gitignore  index.html  package-lock.json  package.json
crates/console/web/src/: Actions.tsx  App.tsx  Config.tsx  Login.tsx  auth.ts  styles.css  useEvents.ts
crates/control/: Cargo.toml
crates/control/src/: lib.rs  store.rs  tracing_layer.rs
crates/lark-kit/: Cargo.toml
crates/lark-kit/src/: bot.rs  card.rs  config.rs  event.rs  lib.rs  server.rs  slot.rs  utils.rs  webhook.rs
crates/lark-kit/src/routing/: admin.rs  delivery.rs  matcher.rs  mod.rs  model.rs  spec.rs  store.rs  tests.rs  validate.rs
crates/larkstack/: Cargo.toml  build.rs  fallback.html
crates/larkstack-core/: Cargo.toml
crates/larkstack-core/src/: app.rs  db.rs  lark.rs  lib.rs  metrics.rs  state.rs  tracing_layer.rs
crates/larkstack/src/: assets.rs  lark_apps.rs  lib.rs  oauth.rs  supervisor.rs
crates/larkstack/src/routes/: actions.rs  config.rs  console_auth.rs  events.rs  lark_apps.rs  mod.rs  oauth.rs  status.rs
crates/larkstack/web/src/: Actions.tsx  App.tsx  Config.tsx  Events.tsx  LarkApps.tsx  Status.tsx  styles.css
crates/linear-bridge/: Cargo.toml  wrangler.toml
crates/linear-bridge/src/: actions.rs  config.rs  debounce.rs  event.rs  lib.rs  main.rs  run.rs  utils.rs
crates/linear-bridge/src/sinks/: mod.rs
crates/linear-bridge/src/sinks/lark/: bot.rs  mod.rs  models.rs
crates/linear-bridge/src/sources/linear/: handler.rs  models.rs
crates/meeting-digest/: .gitignore  Cargo.toml  README.md
crates/meeting-digest/src/: actions.rs  audio.rs  config.rs  events.rs  lib.rs  main.rs  pipeline.rs
crates/standup-bot/: .gitignore  Cargo.toml
crates/standup-bot/src/: actions.rs  commands.rs  config.rs  flow.rs  lib.rs  main.rs  scheduler.rs
crates/standup-bot/templates/: help.txt
dashboard/: biome.jsonc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  Login.tsx  main.tsx  styles.css  useEvents.ts
dashboard/src/components/: Checkbox.tsx  LarkBinding.tsx  Layout.tsx  OpenConsoleBanner.tsx  RegisterLarkApp.tsx  RoutingEditor.tsx  Select.tsx  Spinner.tsx  TabBar.tsx
dashboard/src/lib/: auth.ts  http.ts  useEvents.ts
dashboard/src/tabs/: Actions.tsx  Config.tsx  Events.tsx  GitHub.tsx  Gitlab.tsx  LarkApps.tsx  Linear.tsx  Minutes.tsx  Setup.tsx  Standup.tsx  Status.tsx  X.tsx
docs/: architecture.md  index.md
docs/deploy/: cloudflare-workers.md  console.md  railway.md
docs/getting-started/: configuration.md  quickstart.md
src/: debounce_do.rs
xtask/: Cargo.toml
xtask/src/: main.rs  tasks.rs
(+14 files in other folders)
