[package]
name = "larkstack"
description = ""
version = "0.1.0"
edition = "2024"
authors = ["S3anJia", "AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "larkstack"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = [
    "tokio/rt-multi-thread",
    "tokio/time",
    "tokio/net",
    "tokio/macros",
    "axum/tokio",
    "axum/http1",
    "reqwest/rustls-tls",
    "dep:figment",
    "dep:tracing-subscriber",
    "dep:larkoapi",
]
cf-worker = [
    "dep:worker",
    "dep:tower-service",
    "dep:getrandom",
    "dep:web-time",
    "dep:wasm-bindgen",
    "dep:http-body-util",
]

[dependencies]
# shared
axum = { version = "0.8", default-features = false, features = [
    "json",
    "macros",
] }
tokio = { version = "1", default-features = false, features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"


# native only
figment = { version = "0.10", features = ["env"], optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
larkoapi = { version = "0.5", optional = true }

# cf-worker only
worker = { version = "0.7", features = ["http"], optional = true }
tower-service = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
web-time = { version = "1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
http-body-util = { version = "0.1", optional = true }
