[workspace]
resolver = "2"
members = ["crates/*", "apps/*/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["S3anJia", "AprilNEA <dev@aprilnea.me>"]

[workspace.dependencies]
axum = { version = "0.8", default-features = false }
tokio = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["env"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
sea-orm = { version = "2.0.0-rc.40", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc.40", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
