[package]
name = "console"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "larkstack admin console — single-binary host that registers the bundled apps"

[[bin]]
name = "larkstack-console"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
larkstack = { path = "../larkstack" }
linear-bridge = { path = "../../apps/integrations/linear-bridge" }
meeting-digest = { path = "../../apps/automations/meeting-digest" }
standup-bot = { path = "../../apps/automations/standup-bot" }
