[package]
name = "console"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "larkstack admin console — single-binary host that registers the bundled apps"

[[bin]]
name = "larkstack-console"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
larkstack = { path = "../larkstack" }
linear = { path = "../../apps/integrations/linear" }
github = { path = "../../apps/integrations/github" }
x = { path = "../../apps/integrations/x" }
minutes = { path = "../../apps/automations/minutes" }
standup = { path = "../../apps/automations/standup" }
