[package]
name = "control"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared control-plane types for larkstack subsystems"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
