[package]
name = "lark-kit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared toolkit for larkstack Lark integration apps — Lark sink, inbound server, config, and event-callback crypto"

[dependencies]
axum = { workspace = true, features = ["tokio", "http1", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros"] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
tokio-util = "0.7"
larkoapi = "0.5"
larkstack-core = { path = "../larkstack-core" }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
