[package]
name = "linear-bridge"
description = "Linear webhook → Lark/Feishu notification bridge"
version = "0.1.0"
edition = "2024"
authors = ["S3anJia", "AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "linear-bridge"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = [
    "tokio/rt-multi-thread",
    "tokio/time",
    "tokio/net",
    "tokio/macros",
    "axum/tokio",
    "axum/http1",
    "reqwest/rustls-tls",
    "dep:figment",
    "dep:tracing-subscriber",
    "dep:larkoapi",
    "dep:toml",
]
cf-worker = [
    "dep:worker",
    "dep:tower-service",
    "dep:getrandom",
    "dep:web-time",
    "dep:wasm-bindgen",
    "dep:http-body-util",
]

[dependencies]
# shared
axum = { workspace = true, features = ["json", "macros"] }
tokio = { workspace = true, features = ["sync"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = { workspace = true }
control = { path = "../control" }
anyhow = { workspace = true }

# native only
figment = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
larkoapi = { version = "0.5", optional = true }
toml = { version = "0.9", optional = true }

# cf-worker only
worker = { version = "0.7", features = ["http"], optional = true }
tower-service = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
web-time = { version = "1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
http-body-util = { version = "0.1", optional = true }
