[package]
name = "linear-bridge"
description = "Linear webhook → Lark/Feishu notification bridge"
version = "0.1.0"
edition = "2024"
authors = ["S3anJia", "AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "linear-bridge"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["tokio", "http1", "json", "macros"] }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "time",
    "net",
    "macros",
    "sync",
] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = { workspace = true }
larkstack-core = { path = "../../../crates/larkstack-core" }
tokio-util = "0.7"
async-trait = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
tracing-subscriber = { workspace = true }
larkoapi = "0.5"
toml = "0.9"
octocrab = { version = "0.42", default-features = false }
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
