[package]
name = "linear"
description = "Linear webhook → Lark notification integration"
version = "0.1.0"
edition = "2024"
authors = ["S3anJia", "AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"

[dependencies]
axum = { workspace = true, features = ["tokio", "http1", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net", "macros", "sync"] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }
tokio-util = "0.7"
toml = "0.9"
graphql_client = "0.16"
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
larkstack-core = { path = "../../../crates/larkstack-core" }
lark-kit = { path = "../../../crates/lark-kit" }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.10.4", default-features = false }
