[package]
name = "x"
description = "X (Twitter) link-preview integration for Lark"
version = "0.1.0"
edition = "2024"
authors = ["S3anJia", "AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "x"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["tokio", "http1", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net", "macros", "sync"] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }
tokio-util = "0.7"
toml = "0.9"
larkstack-core = { path = "../../../crates/larkstack-core" }
lark-kit = { path = "../../../crates/lark-kit" }
